# zkorum

./: .gitignore  AUTHORS  CONTRIBUTING.md  COPYING-README.md  Makefile  README.md  ROADMAP.md  docker-compose-production.yml  nginx.conf  run_all_in_gnome_terminal_tabs.sh
.circleci/: config.yml
.github/workflows/: build-ios-app.yml
doc/: anonymous_pseudonym.md  direct-anonymous-posting.drawio  long-term-architecture-global-passport.drawio  long-term-architecture-many-attributes.drawio  mix-account-and-direct-anon-posting.drawio  modules.drawio  modules_oc2.drawio  nostr.drawio  proposal_doc.md  pseudonymous-account.drawio  secret_data_synchronization.md  short-term-architecture-oc2.drawio  short-term-architecture.drawio
public-keys/prod/: public.prod.v2.key
script/: backup_postgres.sh  change_shell.sh  create_sk_docker_secret.sh  docker-compose-production.yml  gen_keys.sh  nginx.conf  update-agora.sh  update-zkorum.sh
script/rarimo/: migrate-db-verificator.sh
script/vhosts/: nginx.conf
services/afterwork/: .eslintrc.cjs  ;  README.md  env.example  package.json  quasar.config.ts  tsconfig.json
services/agora/: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile.production  Dockerfile.staging  README.md  TEMP_AUTH  env.example  icongenie-profile-png.json  icongenie-profile-splashscreen.json  icongenie-profile.json  index.html  nginx.conf  package.json  quasar.config.ts  tsconfig.json
services/api/: .eslintrc.cjs  .prettierignore  .prettierrc.json  (+11 more)
services/nlp/: README.md  pyproject.toml
services/nlp/src/nlp/: toxicity_classifier.py
(+761 files in other folders)
