[project]
name = "nlp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nicolas Gimenez", email = "nicolas.gimenez@zkorum.com"},
]
dependencies = [
    "detoxify==0.5.2",
    "flask>=3.0.2",
    "waitress>=3.0.0",
    "orjson>=3.9.15",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "AGPLV3"}


[tool.pdm]
distribution = false
